--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <section class="section">
                 <h2 class="section-title">About Me</h2>
                 <p class="about-text">
-                    I am a Senior Consultant at Capco (Wipro) in the BFSI sector, passionate about transforming lending with innovative IT solutions. Currently working from home with my office based in Gurgaon. I live with my parents in Sahibabad (Delhi NCR).
+                    I am a Senior Consultant at Capco (Wipro.) in the BFSI sector, passionate about transforming lending with innovative IT solutions. Currently working from home with my office based in Gurgaon. I live with my parents in Sahibabad (Delhi NCR).
                 </p>
             </section>
 
